<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ola.quizapp2.MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/movie1" />

        </LinearLayout>

        <TextView
            android:id="@+id/question1"
            style="@style/QuestionsStyle"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/bogart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_answer1"
                style="@style/view"
                android:checked="false"
                android:text="@string/question1_answer1" />

            <RadioButton
                android:id="@+id/question1_answer2"
                style="@style/view"
                android:checked="false"
                android:text="@string/question1_answer2" />

            <RadioButton
                android:id="@+id/question1_answer3"
                style="@style/view"
                android:checked="false"
                android:text="@string/question1_answer3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            style="@style/QuestionsStyle"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/coppola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question2_answer1"
                style="@style/view"
                android:text="@string/question2_answer1" />

            <RadioButton
                android:id="@+id/question2_answer2"
                style="@style/view"
                android:text="@string/question2_answer2" />

            <RadioButton
                android:id="@+id/question2_answer3"
                style="@style/view"
                android:text="@string/question2_answer3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            style="@style/QuestionsStyle"
            android:labelFor="@+id/question3_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question3" />

        <EditText
            android:id="@+id/question3_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/question4"
            style="@style/QuestionsStyle"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/question4_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer1" />

        <CheckBox
            android:id="@+id/question4_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer2" />

        <CheckBox
            android:id="@+id/question4_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer3" />

        <CheckBox
            android:id="@+id/question4_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer4" />

        <TextView
            android:id="@+id/question5"
            style="@style/QuestionsStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/question5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/QuestionsStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="1" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/question6"
            style="@style/QuestionsStyle"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question6" />

        <CheckBox
            android:id="@+id/question6_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6_answer1" />

        <CheckBox
            android:id="@+id/question6_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6_answer2" />

        <CheckBox
            android:id="@+id/question6_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6_answer3" />

        <CheckBox
            android:id="@+id/question6_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6_answer4" />

        <TextView
            android:id="@+id/question7"
            style="@style/QuestionsStyle"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question7" />

        <RadioGroup
            android:id="@+id/club"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question7_answer1"
                style="@style/view"
                android:text="@string/question7_answer1" />

            <RadioButton
                android:id="@+id/question7_answer2"
                style="@style/view"
                android:text="@string/question7_answer2" />

            <RadioButton
                android:id="@+id/question7_answer3"
                style="@style/view"
                android:text="@string/question7_answer3" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetScore"
                android:text="@string/reset" />
        </LinearLayout>

        <Button
            android:id="@+id/help_button"
            style="@style/ButtonStyle"
            android:layout_marginRight="@dimen/padding_10dp"
            android:layout_weight="1"
            android:text="@string/help" />


    </LinearLayout>
</ScrollView>

